# render-bridge

./: README.md
Renderbridge API/: README.md  (+4 more)
Renderbridge API/RenderBridge/: CMakeLists.txt  README.md
Renderbridge API/RenderBridge/RX/: logging.settings
Renderbridge API/RenderBridge/RX/data/scripts/: common.lua  extension_in.lua  extension_out.lua  manager.lua  service.lua  settings.lua  standalone.lua  startup.lua.new  storage_server.lua  user_settings.lua  user_settings.lua.new
Renderbridge API/RenderBridge/RX/data/shaders/: CefSampler.glsl  ColorTransform.glsl  ColorTransformDynamic.glsl  CubeMapSampler.glsl  DebugTextSampler.glsl  FrameBlender.glsl  FrameSampler.glsl  HitTest.glsl  LayerRenderer.frag  LayerRenderer.vert  MinimalPipe.frag  MinimalPipe.vert  MultiSampler.glsl  NotchSampler.glsl  PresentPipe.frag  PresentPipe.vert  RangeSampler.glsl  RendererUniforms.h  ResolvePipe.frag  ResolvePipe.vert  Sampler.glsl  SolidColor.glsl  StandardPipe.frag  StandardPipe.vert  StandardPipeUntransformed.vert  TextContour.glsl  UnitySampler.glsl  UnrealSampler.glsl  WarpBlend.glsl  WarpBlendAlphaMask.glsl  WarpBlendBlackLevel.glsl  WarpBlendColorCorrection.glsl  WarpBlendColorCorrectionRT.glsl  WarpBlendDynamic.glsl  WarpBlendDynamicPlanar.glsl  WarpBlendViewProjection.glsl  WarpBlendViewProjectionColorCorrection.glsl  WarpBlendViewProjectionReveal.glsl  WarpBlendWarped.glsl  cuda_copy_to_packets.cu  (+22 more)
Renderbridge API/RenderBridge/RX/data/shaders/common/: quat.glsl
Renderbridge API/RenderBridge/docs/: Reference.html  Reference.md
Renderbridge API/RenderBridge/extensions/ExtNDI/: run.lua
Renderbridge API/RenderBridge/extensions/ExtNDI/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h  Output.cpp  Output.h  ndi.h
Renderbridge API/RenderBridge/extensions/ExtNotch/: run.lua
Renderbridge API/RenderBridge/extensions/ExtNotch/libs/notch/: NotchBlock.cpp  NotchBlock.h
Renderbridge API/RenderBridge/extensions/ExtNotch/src/: Block.cpp  Block.h  Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h  Instance.cpp  Instance.h  Parameter.cpp  Parameter.h
Renderbridge API/RenderBridge/extensions/ExtNotch/src/d3d11/: ComPointer.h  d3d11.cpp  d3d11.h  getSecurityAttributes.cpp
Renderbridge API/RenderBridge/extensions/ExtSampleCPU/: run.lua
Renderbridge API/RenderBridge/extensions/ExtSampleCPU/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h  Input2.cpp  Input2.h
Renderbridge API/RenderBridge/extensions/ExtSampleD3D/: run.lua
Renderbridge API/RenderBridge/extensions/ExtSampleD3D/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h
Renderbridge API/RenderBridge/extensions/ExtSampleShader/: run.lua
Renderbridge API/RenderBridge/extensions/ExtSampleShader/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h
Renderbridge API/RenderBridge/extensions/ExtSampleVK/: run.lua
Renderbridge API/RenderBridge/extensions/ExtSampleVK/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h
Renderbridge API/RenderBridge/extensions/ExtSpout/: run.lua
Renderbridge API/RenderBridge/extensions/ExtSpout/src/: Device.cpp  Device.h  Extension.cpp  Extension.h  Input.cpp  Input.h  Output.cpp  Output.h  spout.h
Renderbridge API/RenderBridge/include/: rxext.h  rxext_client.h  rxext_util.h
Renderbridge API/RenderBridge/include/ptl/: function.hpp  string.hpp  vector.hpp
Renderbridge API/RenderBridge/libs/common/: Duration.h  statistics.h  string.cpp  string.h  string.inl.h  to_double.h
Renderbridge API/RenderBridge/libs/util/: RenderIntervalManager.h  get_temp_filename.cpp  get_temp_filename.h
(+20 files in other folders)
